# cloudformation-cli-go-plugin

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Gopkg.toml  MANIFEST.in  Makefile  NOTICE  README.md  buildspec.yml  generate-examples.sh  go.mod  go.sum  setup.cfg  setup.py  template.yaml
.github/workflows/: pr-ci.yml
cfn/: awsMocks.go  cfn.go  cfn_test.go  context.go  doc.go  entry.go  entry_test.go  event.go  reportErr.go  request.go  resourceMock.go  resourceMocks.go  response.go  response_test.go  types_test.go  wrapper.go  wrapper_test.go
cfn/action/: action.go  action_test.go
cfn/callback/: callback.go  callback_notag.go  callback_test.go  status.go
cfn/cfnerr/: consts.go  doc.go  error.go  types.go
cfn/credentials/: credentials.go  credentials_test.go
cfn/encoding/: encoding.go  encoding_test.go  marshal.go  marshal_test.go  stringify.go  stringify_test.go  unmarshal.go  unstringify.go  unstringify_test.go  value.go  values.go
cfn/errcode/: error_code.go  error_code_test.go
cfn/errorCode/: error_code.go  error_code_test.go
cfn/errs/: Terminal.go
cfn/handler/: action.go  context.go  doc.go  errs.go  event.go  event_test.go  handler.go  handler_test.go  progress_event.go  (+4 more)
cft/: Gopkg.toml  awsMocks.go  entry.go  request.go  resourceMocks.go  response.go  wrapper.go  wrapper_test.go
examples/: doc.go
metric/: publisher_test.go
proxy/: awsMocks.go  entry.go  lambda.go  lambda_test.go  progressEvent.go  proxy.go  proxy_test.go  request.go  resourceMocks.go  response.go
scheduler/: cloudWatchScheduler_test.go
(+232 files in other folders)
