[metadata]
license_file = LICENSE
description-file = README.md

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_first_party = rpdk
known_third_party = boto3,botocore,jinja2,jsonschema,yaml
